--- a/Source code.css
+++ b/Source code.css
@@ -1,6 +1,6 @@
 @import url("https://capnkitten.github.io/BetterDiscord/Themes/user-icons.css");
 :root {
-  --app-bg: url(https://cdn.discordapp.com/attachments/783894593531543553/983917212538667038/Transparent_image.png?size=100);
+  --app-bg: url(https://www.freepik.com/free-photos-vectors/cool-background);
   --app-blur: 6px;
   --app-margin: 24px;
   --app-radius: 10px;
